etc/kube/fivecolors-asset.yaml
kind: Service
apiVersion: v1
metadata:
  name: fivecolors-asset
spec:
  selector:
    app: fivecolors-asset
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fivecolors-asset
  labels:
    app: fivecolors-aasset
    tier: be
    version: 0.0.1
spec:
  selector:
    matchLabels:
      app: fivecolors-asset
      tier: be
      version: 0.0.1
  replicas: 1
  template:
    metadata:
      labels:
        app: fivecolors-asset
        tier: be
        version: 0.0.1
    spec:
      containers:
        - name: fivecolors-asset
          image: fivecolors-asset:0.0.1
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: "/var/lib/db/asset/data"
              name: assets-storage
      volumes:
        - name: assets-storage
          persistentVolumeClaim:
            claimName: assets-read-claim
        - name: relative-storage
