etc/kube/postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
    version: 10.4-alpine
spec:
  selector:
    matchLabels:
      app: postgres
      tier: be
      version: 10.4-alpine
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        tier: be
        version: 10.4-alpine
    spec:
      containers:
        - name: postgres
          image: postgres:10.4-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data/pgdata"
              name: postgres-storage
            - mountPath: "/docker-entrypoint-initdb.d"
              name: postgres-init-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-claim
        - name: postgres-init-storage
          hostPath:
            path: /Users/raphaeljansen/Projects/Elysion/FiveColors/storage/db/postgres/init
            type: Directory
